Force: update to modern toList.